fix: frequence and print and price error